--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!--Where random number is stored-->
 <h3>
-    <div class = randNum>Number to guess:</div>
+    <div class ="randNum">Number to guess:</div>
     <div id="number-bank"></div>
 </h3>
 
